removed flex gap compability bug

--- a/css/style.css
+++ b/css/style.css
@@ -230,13 +230,14 @@ header {
   display: -ms-flexbox;
   display: flex;
   list-style: none;
-  gap: 20px;
+  padding-left: 0px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
 .nav__link a {
+  margin-left: 20px;
   font-size: 22px;
   display: block;
   width: 100%;
